--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
     width: 100%;
     background: var(--white-color);
     transition: all 0.5s;
+    position: fixed;
 }
 
 .logo {
@@ -73,4 +74,50 @@ body {
 .menu .bar:nth-child(1),
 .menu .bar:nth-child(3) {
     background: var(--primary-color);
+}
+
+.home {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10%;
+}
+
+.home-text {
+    max-width: 37rem;
+}
+
+.home-text .text-h4 {
+    font-size: 1.5rem;
+    color: var(--primary-color);
+    margin-bottom: 1rem;
+}
+
+.home-text .text-h1 {
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    line-height: 4rem;
+}
+
+.home-text p {
+    margin-bottom: 4rem;
+}
+
+.btn {
+    padding: 15px 45px;
+    background: var(--primary-color);
+    color: var(--white-color);
+    border-radius: 10px;
+    font-weight: 700;
+    transition: all 0.5s;
+}
+
+.btn:hover {
+    background: red;
+}
+
+.home-img {
+    width: 100%;
 }
