--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@
     --primary-color: #1e7c1e;
     --white-color: #fff;
     --dark-color: #1e1c2a;
+
+    --color-red: #e63636;
+    --color-dark1: #181818;
+    --color-dark2: #1e1e1e;
+    --color-purple1: #9333ff;
+    --color-purple2: indigo;
 }
 
 body {
@@ -81,7 +87,7 @@ body {
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 0 10%;
 }
 
@@ -139,22 +145,71 @@ body {
 }
 
 /*Formulário*/
-
 .formulario {
-    width: 768px;
-    margin: 0 auto;
+    background: var(--color-dark1);
+    color: var(--white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.content {
+    background-color: var(--color-dark2);
+    padding: 2rem;
+    border-radius: 10px;
+    min-width: 30%;
+    overflow: auto;
 }
 
-#form {
-    background-color: #ccc;
-    padding: 40px 20px;
-    margin-top: 50px;
-    box-shadow: 0 0 15px #000;
-}
-
-#form h2 {
+.content h2 {
+    margin-bottom: 1rem;
     text-align: center;
 }
+
+.content form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.span-required {
+    display: none;
+}
+
+.inputs {
+    padding: 8px 5px;
+    outline: none;
+    border-radius: 5px;
+    background-color: var(--color-dark1);
+    border: 2px solid var(--color-dark1);
+    color: var(--white-color);
+    width: 100%;
+    transition: .3s;
+}
+
+.inputs:focus {
+    border-color: var(--primary-color);
+}
+
+.box-select {
+    display: flex;
+    justify-content: space-between;
+}
+
+button[type="submit"] {
+    padding: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    margin-top: 1rem;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    cursor: pointer;
+    transition: .3s;
+}
+
 
 @media (max-width: 785px) {
     .navbar {
