--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,18 @@ button[type="submit"] {
         display: block;
     }
 
+    .menu.ativo .bar:nth-child(1) {
+        transform: translateY(7px) rotate(45deg);
+    }
+
+    .menu.ativo .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu.ativo .bar:nth-child(3) {
+        transform: translateY(-7px) rotate(-45deg);
+    }
+
     .nav-menu {
         position: fixed;
         right: -100%;
@@ -230,6 +242,10 @@ button[type="submit"] {
         background: var(--white-color);
         gap: -10px;
         transition: 0.3s;
+    }
+
+    .nav-menu.ativo {
+        right: 0;
     }
 
     .nav-item {
