--- a/css/style.css
+++ b/css/style.css
@@ -251,4 +251,29 @@ button[type="submit"] {
     .nav-item {
         margin: 16px 0;
     }
+
+    .home {
+        padding: 100px 2%;
+        flex-direction: column;
+        text-align: center;
+        overflow: hidden;
+        gap: 5rem;
+    }
+
+    .home .text-h4 {
+        font-size: 15px;
+    }
+
+    .home .text-h1 {
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+
+    .home p {
+        font-size: 15px;
+    }
+
+    .home-img img {
+        width: 250px;
+    }
 }
