--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@ body {
     transition: all 0.5s;
 }
 
+.navbar i {
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
 .menu {
     cursor: pointer;
     display: none;
@@ -145,7 +150,7 @@ body {
 }
 
 /*Tabela*/
-.table {
+#table {
     background-color: red;
     width: 100%;
     display: flex;
@@ -179,6 +184,7 @@ td {
 }
 
 .content {
+    height: 100vh;
     background-color: var(--color-dark2);
     padding: 2rem;
     border-radius: 10px;
