--- a/css/login.css
+++ b/css/login.css
@@ -46,3 +46,91 @@ section#login>div#formulario {
     padding: 10px;
 }
 
+div#formulario h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario p {
+    font-size: 0.8em;
+}
+
+form>div.campo {
+    background: #5f2c82;
+    width: 100%;
+    display: block;
+    height: 30px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+form>input[type=submit] {
+    display: block;
+    font-size: 1rem;
+    font-weight: bold;
+    width: 100%;
+    height: 30px;
+    background: rgb(109, 32, 32);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form>a.btn {
+    display: block;
+    text-align: center;
+    font-size: 1rem;
+    width: 100%;
+    height: 30px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: yellowgreen;
+    border: 1px solid red;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+/*Tablet*/
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    section#login {
+        width: 80vw;
+    }
+
+    section#login>div#imagem {
+        float: left;
+        width: 30%;
+        height: 100%;
+    }
+
+    section#login>div#formulario {
+        float: right;
+        width: 70%;
+    }
+}
+
+/*Desktop*/
+@media screen and (min-width: 992px) {
+    section#login {
+        width: 950px;
+    }
+
+    section#login>div#imagem {
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+
+    section#login>div#formulario {
+        float: right;
+        width: 50%;
+    }
+
+    div#formulario h1 {
+        font-size: 2rem;
+    }
+
+    div#formulario p {
+        font-size: 1.5rem;
+    }
+}
