--- a/css/login.css
+++ b/css/login.css
@@ -25,7 +25,7 @@ section#login {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
+    background-color: rgb(38, 187, 233);
     width: 250px;
     height: 500px;
     border-radius: 20px;
@@ -56,23 +56,38 @@ div#formulario p {
 }
 
 form>div.campo {
-    background: #5f2c82;
     width: 100%;
     display: block;
     height: 30px;
     border-radius: 5px;
     margin: 5px 0px;
+    border: 1px solid #000;
+    padding: 5px;
 }
+
+#login {
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    height: 20px;
+}
+
+#senha {
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    height: 20px;
+}
+
 
 form>input[type=submit] {
     display: block;
     font-size: 1rem;
-    font-weight: bold;
     width: 100%;
     height: 30px;
-    background: rgb(109, 32, 32);
-    color: #fff;
-    border: none;
+    background-color: transparent;
+    color: #000;
+    border: 1px solid #000;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -85,8 +100,9 @@ form>a.btn {
     height: 30px;
     padding-top: 5px;
     margin-top: 5px;
-    background-color: yellowgreen;
-    border: 1px solid red;
+    background-color: transparent;
+    color: #000;
+    border: 1px solid #000;
     border-radius: 5px;
     text-decoration: none;
 }
@@ -132,5 +148,6 @@ form>a.btn {
 
     div#formulario p {
         font-size: 1.5rem;
+        margin: 20px 0;
     }
 }
