--- a/02_landingPage/css/style.css
+++ b/02_landingPage/css/style.css
@@ -155,11 +155,11 @@ section {
 }
 
 .about {
-    /* border: 1px solid red; */
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     align-items: center;
     grid-gap: 3rem;
+
 }
 
 .about-img img {
@@ -188,7 +188,6 @@ section {
     font-size: var(--p-font);
     margin-bottom: 45px;
 }
-
 
 #menu {
     /* border: 1px solid red; */
@@ -249,6 +248,64 @@ td {
     border: 1px solid #000;
     padding: 10px;
 }
+
+
+/*Testimonials*/
+.testimonials {
+    padding: 40px 0;
+    background: #f1f1f1;
+    color: #434343;
+    text-align: center;
+}
+
+.inner {
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+    padding: 0 20px;
+}
+
+.border {
+    width: 160px;
+    height: 5px;
+    background: #6ab04c;
+    margin: 26px auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.col {
+    flex: 33.33%;
+    max-width: 33.33%;
+    padding: 15px;
+}
+
+.testimonial {
+    background: #fff;
+    padding: 30px;
+}
+
+.testimonial img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.name {
+    font-size: 20px;
+    text-transform: uppercase;
+    margin: 20px 0;
+}
+
+.stars {
+    color: rgb(224, 224, 127);
+    margin-bottom: 20px;
+}
+
 
 /*Formulário*/
 #formulario {
@@ -327,6 +384,19 @@ button[type="submit"] {
     letter-spacing: 1px;
 }
 
+@media screen and (max-width:960px) {
+    .col {
+        flex: 100%;
+        max-width: 80%;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .col {
+        flex: 100%;
+        max-width: 100%;
+    }
+}
 
 @media (max-width: 785px) {
     .navbar {
