revisando estrutura da index.html

--- a/02_landingPage/css/login.css
+++ b/02_landingPage/css/login.css
@@ -25,7 +25,7 @@ section#login {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #ccc;
+    background-color: #fff;
     width: 250px;
     height: 500px;
     border-radius: 20px;
@@ -78,7 +78,6 @@ form>div.campo {
     outline: none;
     height: 20px;
 }
-
 
 form>input[type=submit] {
     display: block;
