--- a/02_landingPage/css/style.css
+++ b/02_landingPage/css/style.css
@@ -13,12 +13,9 @@
     --primary-color: #1e7c1e;
     --white-color: #fff;
     --dark-color: #1e1c2a;
-
     --color-red: #e63636;
     --color-dark1: #181818;
     --color-dark2: #1e1e1e;
-    --color-purple1: #9333ff;
-    --color-purple2: indigo;
 }
 
 body {
@@ -26,6 +23,11 @@ body {
     background: var(--white-color);
 }
 
+section {
+    padding: 50px 15%;
+}
+
+/*Header*/
 .navbar {
     display: flex;
     align-items: center;
@@ -87,6 +89,7 @@ body {
     background: var(--primary-color);
 }
 
+/*Main*/
 .home {
     width: 100%;
     height: 100vh;
@@ -150,16 +153,12 @@ body {
     flex: 1;
 }
 
-section {
-    padding: 50px 15%;
-}
-
+/*Sobre*/
 .about {
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     align-items: center;
     grid-gap: 3rem;
-
 }
 
 .about-img img {
@@ -190,7 +189,6 @@ section {
 }
 
 #menu {
-    /* border: 1px solid red; */
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     align-items: center;
@@ -202,7 +200,6 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* margin-bottom: 50px; */
 }
 
 #carrossel img {
@@ -240,7 +237,6 @@ thead {
 th {
     text-align: left;
     font-size: 12px;
-
 }
 
 th,
@@ -248,7 +244,6 @@ td {
     border: 1px solid #000;
     padding: 10px;
 }
-
 
 /*Testimonials*/
 .testimonials {
@@ -306,7 +301,6 @@ td {
     margin-bottom: 20px;
 }
 
-
 /*Formulário*/
 #formulario {
     color: var(--white-color);
@@ -333,7 +327,7 @@ td {
     gap: 1rem;
 }
 
-.span-required {
+#vl_nome {
     display: none;
     color: red;
 }
