--- a/02_landingPage/css/style.css
+++ b/02_landingPage/css/style.css
@@ -164,7 +164,6 @@ section {
 .about-img img {
     width: 100%;
     height: auto;
-    border-radius: 10px;
 }
 
 .about-text h2 {
@@ -434,8 +433,9 @@ button[type="submit"] {
     }
 
     .home {
+        display: flex;
+        flex-direction: column;
         padding: 100px 2%;
-        flex-wrap: wrap;
         text-align: center;
         overflow: hidden;
         gap: 5rem;
@@ -455,8 +455,28 @@ button[type="submit"] {
     }
 
     .home-img img {
-        width: 250px;
-        /* height: 100%; */
+       width: 100%;
+       height: auto;
+    }
+
+    .about {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-img img {
+        width: 100%;
+        height: auto;
+    }
+
+    #menu {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #carrossel img {
+        width: 100%;
+        height: auto;
     }
 
 }
