--- a/02_landingPage/css/style.css
+++ b/02_landingPage/css/style.css
@@ -416,12 +416,13 @@ button[type="submit"] {
         position: fixed;
         right: -100%;
         top: 70px;
-        width: 100%;
-        height: 100%;
+        width: 30%;
+        height: 70%;
         flex-direction: column;
-        background: var(--white-color);
+        background: var(--primary-color);
         gap: -10px;
         transition: 0.3s;
+        z-index: 1000;
     }
 
     .nav-menu.ativo {
